--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About</title>
+
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
